--- a/WindowsFormsApplication1кп20/Properties/Resources.resx
+++ b/WindowsFormsApplication1кп20/Properties/Resources.resx
@@ -120,4 +120,11 @@
   <data name="MainTitle" xml:space="preserve">
     <value>Игра "Судоку"</value>
   </data>
+  <data name="CheckMessage" xml:space="preserve">
+    <value>Проверка</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Content\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
